# timeline-generator

./: Dockerfile  README.md  docker-compose.yml  example.txt  pyproject.toml
src/timeline_generator/: drawing.py  main.py  models.py
