[tool.poetry]
name = "timeline-generator"
version = "0.1.0"
description = "A FastAPI service that generates SVG timelines from event data"
authors = ["nuuner <domen.iglic@proton.me>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nuuner/timeline-generator"
keywords = ["timeline", "svg", "fastapi", "visualization"]

[tool.poetry.dependencies]
python = "^3.12"
drawsvg = "^2.3.0"
pydantic = "^2.6.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
